⚡️ Added unit tests, swagger authentication, body validations
